@@ -23,7 +23,7 @@ version.minor=5
 version.patch=4
 version.buildnumber=${buildnumber}
 version.extra=Beta
-version.extra1=pre-RC1
+version.extra1=RC1
 
 # the starting class for the application
 class.start=com.romraider.ECUExec
